--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "ts-node ./app"
+    "start": "ts-node ./app",
+    "lint": "prettier --write './**/*.{ts,tsx}' --config ./.prettierconfig"
   },
   "dependencies": {
     "debug": "~2.6.9",
@@ -20,6 +21,7 @@
     "@types/express": "^4.16.1",
     "@types/express-fileupload": "^0.4.0",
     "@types/http-errors": "^1.6.1",
+    "prettier": "^1.16.4",
     "ts-node": "^8.0.3",
     "typescript": "^3.4.1"
   }
